syntax = "proto3";

package im_home_proto;
import "home_chat.proto";
import "home_account.proto";

// 生成golang文件的目录
option go_package = "github.com/mimis-s/IM-Service/src/common/commonproto/im_home_proto";


// 转发给对方的聊天消息
message ChatSingleToReceiver {
    ChatMessage Data = 1;
}

// 好友申请转发
message ApplyFriendsToReceiver {
    int64 SenderID = 1;         // 发送者userid
    int64 ReceiverID = 2;       // 接收者userid
    UserInfo ApplyerInfo = 3;   // 申请者的信息
}

// 同意好友申请转发
message AgreeApplyFriendsToReceiver {
    int64 SenderID = 1;         // 发送者userid
    int64 ReceiverID = 2;       // 接收者userid
}

// 服务器推送的数据
message NotifyUserMessage {
    repeated NotifyOfflineMessage OfflineSingleChat = 1; // 私聊信息
}

message NotifyOfflineMessage {
    UserInfo User = 1;  // 好友信息
    repeated ChatMessage Data = 2; // 离线消息
}
